--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -9,6 +9,9 @@ on:
   push:
     branches:
       - "main"
+  merge_group:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       ffcx_branch:
