--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -9,7 +9,10 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch: ~
+  merge_group:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
