--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -13,6 +13,10 @@ on:
       - "v*"
     branches:
       - main
+  merge_group:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
