--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -40,7 +40,9 @@ jobs:
 
       - name: Install Basix
         # run: python3 -m pip -v install .[ci]
-        run: python3 -m pip -v install --no-build-isolation .
+        run: |
+          python3 -m pip -v install scikit_build_core[pyproject]
+          python3 -m pip -v install --no-build-isolation .
 
   #     - name: Lint with flake8
   #       run: |
