--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install Basix
         # run: python3 -m pip -v install .[ci]
         run: |
-          python3 -m pip -v install scikit_build_core[pyproject]
+          python3 -m pip -v install scikit_build_core[pyproject] nanobind
           python3 -m pip -v install --no-build-isolation .
 
   #     - name: Lint with flake8
