--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -145,7 +145,7 @@ jobs:
 
   isolated-python-build:
     name: Build Python using '--no-build-isolation'
-    runs-on: ubuntu-22.04]
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
