--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -39,7 +39,7 @@ jobs:
           sudo apt-get install -y doxygen graphviz libopenblas-dev liblapack-dev ninja-build
 
       - name: Install Basix
-        run: python3 -m pip -v install .[ci]
+        run: pip -v install .[ci]
 
       - name: Lint with flake8
         run: |
@@ -48,20 +48,16 @@ jobs:
           flake8 --statistics demo/python
 
       - name: Run mypy checks
-        run: |
-          python3 -m mypy python/basix
+        run: mypy python/basix
 
       - name: pydocstyle checks
-        run: |
-          python3 -m pydocstyle python/basix
+        run: pydocstyle python/basix
 
       - name: isort checks
-        run: |
-          python3 -m isort --check .
+        run: isort --check .
 
       - name: Run units tests
-        run: |
-          python3 -m pytest -n auto --durations 20 test/
+        run: pytest -n auto --durations 20 test/
 
       - name: Run simple CMake integration test
         run: |
@@ -71,12 +67,10 @@ jobs:
           build-dir/a.out
 
       - name: Run Python demos
-        run: |
-          python3 -m pytest demo/python/test.py
+        run: pytest demo/python/test.py
 
       - name: Run C++ demos
-        run: |
-          python3 -m pytest demo/cpp/test.py
+        run: pytest demo/cpp/test.py
 
       - name: Build documentation
         run: |
@@ -145,13 +139,13 @@ jobs:
 
   isolated-python-build:
     name: Build Python using '--no-build-isolation'
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build
       - name: Install Python dependencies
-        run: pip install nanobind
+        run: pip install nanobind scikit-build-core[pyproject]
       - name: Install Basix
         run: pip install --no-build-isolation .
 
@@ -162,7 +156,6 @@ jobs:
       matrix:
         os: [ubuntu-22.04]
         python-version: ["3.11"]
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
@@ -171,31 +164,24 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: sudo apt-get install -y libopenblas-dev liblapack-dev
-
       - name: Install Basix C++ library
         run: |
           cd cpp
           cmake -DCMAKE_BUILD_TYPE=Release -B build-dir -S . # Use make (not ninja)
           cmake --build build-dir
           sudo cmake --install build-dir
-
       - name: Install Basix Python wrapper
         run: |
           cd python
-          python3 -m pip install .[test]
-
+          pip install .[test]
       - name: Run units tests
         run: |
-          python3 -m pip install pytest-xdist # in ci extras, but most not needed.
-          python3 -m pytest -n auto --durations 20 test/
-
+          pip install pytest-xdist # in ci extras, but most not needed.
+          pytest -n auto --durations 20 test/
       - name: Run Python demos
-        run: |
-          python3 -m pytest demo/python/test.py
-
+        run: pytest demo/python/test.py
       - name: Run C++ demos
-        run: |
-          python3 -m pytest demo/cpp/test.py
+        run: pytest demo/cpp/test.py
 
   build-cpp-only:
     name: Build C++ only and run demos
@@ -204,18 +190,16 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build
-
       - name: Install Basix
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -B build-dir -S cpp
           cmake --build build-dir
           sudo cmake --install build-dir
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
       - name: Run C++ demos
         run: |
-          python3 -m pip install pytest
-          python3 -m pytest demo/cpp/test.py
+          pip install pytest
+          pytest demo/cpp/test.py
