--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,7 +26,6 @@ jobs:
       matrix:
         os: [ubuntu-22.04]
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
@@ -37,41 +36,28 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y doxygen graphviz libopenblas-dev liblapack-dev ninja-build
-
       - name: Install Basix
         run: pip -v install .[ci]
-
       - name: Lint with flake8
-        run: |
-          flake8 --statistics test/
-          flake8 --statistics python/
-          flake8 --statistics demo/python
-
+        run: flake8 --statistics test/ python/ demo/python
       - name: Run mypy checks
         run: mypy python/basix
-
       - name: pydocstyle checks
         run: pydocstyle python/basix
-
       - name: isort checks
         run: isort --check .
-
       - name: Run units tests
         run: pytest -n auto --durations 20 test/
-
       - name: Run simple CMake integration test
         run: |
           cd test/test_cmake
           cmake -DCMAKE_BUILD_TYPE=Debug -DPython3_EXECUTABLE=python3 -G Ninja -B build-dir -S .
           cmake --build build-dir/
           build-dir/a.out
-
       - name: Run Python demos
         run: pytest demo/python/test.py
-
       - name: Run C++ demos
         run: pytest demo/cpp/test.py
-
       - name: Build documentation
         run: |
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
@@ -79,7 +65,6 @@ jobs:
           doxygen
           cd ../python
           make html
-
       - name: Upload C++ documentation artifact
         uses: actions/upload-artifact@v3
         with:
@@ -96,13 +81,11 @@ jobs:
             doc/python/build/html
           retention-days: 2
           if-no-files-found: error
-
       - name: Build website documentation
         run: |
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
           cd doc/web
           python make_html.py
-
       - name: Set version name
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && matrix.python-version == '3.11' }}
         run: |
@@ -142,6 +125,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
       - name: Install dependencies
         run: sudo apt-get install -y libopenblas-dev liblapack-dev ninja-build
       - name: Install Python dependencies
@@ -151,17 +138,13 @@ jobs:
 
   build-cmake:
     name: Build using C++ and Python parts separately and run tests
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-22.04]
-        python-version: ["3.11"]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
       - name: Install dependencies
         run: sudo apt-get install -y libopenblas-dev liblapack-dev
       - name: Install Basix C++ library
@@ -185,7 +168,7 @@ jobs:
 
   build-cpp-only:
     name: Build C++ only and run demos
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
@@ -199,7 +182,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Run C++ demos
+      - name: Run tests
         run: |
           pip install pytest
           pytest demo/cpp/test.py
