--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -21,32 +21,22 @@ on:
 jobs:
   build:
     name: Build and test (MacOS)
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-12]
-
+    runs-on: macos-12
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
       - name: Install dependencies (non-Python)
         run: brew install ninja
-
       - name: Install Basix
-        run: |
-          python -m pip -v install .[test]
-
+        run: pip -v install .[test]
       - name: Run units tests
         run: |
-          python -m pip install pytest-xdist
-          python -m pytest -n auto --durations 20 test/
-
+          pip install pytest-xdist
+          pytest -n auto --durations 20 test/
       - name: Run python demos
-        run: python -m pytest demo/python/test.py
-
+        run: pytest demo/python/test.py
       - name: Run C++ demos
-        run: |
-          python -m pytest demo/cpp/test.py
+        run: pytest demo/cpp/test.py
