--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 11
+          distribution: 'zulu'
+          java-version: 17
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
