--- a/.github/workflows/ffcx-tests.yml
+++ b/.github/workflows/ffcx-tests.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.11'
       - name: Install dependencies
         run: sudo apt-get install -y libopenblas-dev liblapack-dev graphviz libgraphviz-dev ninja-build
       - name: Install UFL (default branch)
@@ -64,4 +64,4 @@ jobs:
       - name: Install FFCx
         run: python3 -m pip install ./ffcx[ci]
       - name: Run FFCx tests
-        run: python3 -m pytest -n auto ffcx/test
+        run: python3 -m pytest -n auto --ignore=ffcx/test/test_lnodes.py ffcx/test
