--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -11,8 +11,11 @@ version = "0.8.0.dev0"
 description = "Basix Python interface"
 readme = "../README.md"
 requires-python = ">=3.8.0"
-license = {file = "../LICENSE"}
-authors = [{email="fenics-dev@googlegroups.com"}, {name="FEniCS Project"}]
+license = { file = "../LICENSE" }
+authors = [
+    { email = "fenics-dev@googlegroups.com" },
+    { name = "FEniCS Project" },
+]
 packages = ["basix"]
 dependencies = ["numpy>=1.21"]
 
