--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["scikit-build-core", "nanobind>=1.6.0"]
+requires = ["scikit-build-core[pyproject]", "nanobind>=1.6.0"]
 build-backend = "scikit_build_core.build"
 # Minimum cmake and any necessary cmake install is handled by
 # scikit-build-core
@@ -11,8 +11,11 @@ version = "0.8.0.dev0"
 description = "Basix Python interface"
 readme = "../README.md"
 requires-python = ">=3.8.0"
-license = {file = "../LICENSE"}
-authors = [{email="fenics-dev@googlegroups.com"}, {name="FEniCS Project"}]
+license = { file = "../LICENSE" }
+authors = [
+    { email = "fenics-dev@googlegroups.com" },
+    { name = "FEniCS Project" },
+]
 packages = ["basix"]
 dependencies = ["numpy>=1.21"]
 
