scikit-build-core won't automatically pickup license in parent directory.

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -29,3 +29,4 @@ ci = ["mypy", "pytest-xdist", "fenics-basix[docs,lint,test,optional]"]
 minimum-version = "0.5"
 cmake.minimum-version = "3.19.0"
 wheel.packages = ["basix"]
+wheel.license = ["../LICENSE"]
