--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -36,9 +36,7 @@ jobs:
       - name: Install Basix
         run: python3 -m pip install .[test]
       - name: Run units tests
-        run: |
-          python3 -m pip install pytest-xdist
-          python3 -m pytest --durations 20 test/
+        run: python3 -m pytest --durations 20 test/
       - name: Run Python demos
         run: python3 -m pytest demo/python/test.py
       - name: Run C++ demos
