Build Redhat CI in debug mode

--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -32,9 +32,10 @@ jobs:
           dnf install -y dnf-plugins-core
           dnf config-manager --set-enabled crb
           dnf install -y blas-devel cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
+          python3 -m pip install pip --upgade
       - uses: actions/checkout@v4
       - name: Install Basix
-        run: python3 -m pip install .[test]
+        run: python3 -m pip install --config-settings=cmake.build-type=Debug .[test]
       - name: Run units tests
         run: python3 -m pytest --durations 20 test/
       - name: Run Python demos
