--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -32,7 +32,7 @@ jobs:
           dnf install -y dnf-plugins-core
           dnf config-manager --set-enabled crb
           dnf install -y blas-devel cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
-          python3 -m pip install pip --upgade
+          python3 -m pip install pip --upgrade
       - uses: actions/checkout@v4
       - name: Install Basix
         run: python3 -m pip install --config-settings=cmake.build-type=Debug .[test]
